<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopicTestActivity">

    <include
        android:id="@+id/topic_wise_toolbar"
        layout="@layout/app_bar_layout"/>

    <TextView
        android:id="@+id/ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:text="@string/ques"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/write_question"
        android:layout_toRightOf="@+id/ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_question"
        android:layout_marginTop="90dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ans_layout1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/write_question"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/a"
            android:text="@string/a"
            android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/option1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:hint="@string/option1"
        android:padding="5dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/b"
            android:text="@string/b"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/option2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:hint="Option2"
            android:padding="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ans_layout2"
        android:layout_margin="10dp"
        android:layout_below="@+id/ans_layout1"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/c"
            android:text="@string/c"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:id="@+id/option3"
            android:hint="@string/option3"
            android:padding="5dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/d"
            android:text="@string/d"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/option4"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:hint="@string/option4"
            android:padding="5dp"/>
    </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans_layout2"
        android:hint="@string/enter_correct_option"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/correct_ans"/>

    <Button
        android:id="@+id/submit_ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/correct_ans"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit_question"/>
</RelativeLayout>