<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeacherActivity">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/teacher_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="70dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/teacherprofile"
            android:src="@drawable/teacher_profile" />

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-150dp"
                android:layout_marginTop="190dp"
                android:text="@string/profile"
                android:textSize="16sp"
                android:textStyle="bold" />

        <ImageView
            android:id="@+id/exam"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="70dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/preparetest"
            android:src="@drawable/exam" />

            <TextView
                android:id="@+id/exam_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-140dp"
                android:layout_marginTop="190dp"
                android:text="@string/exam"
                android:textSize="16sp"
                android:textStyle="bold" />


    </LinearLayout>


    <ImageView
        android:id="@+id/notice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/sendnotice"
        android:src="@drawable/notice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:layout_marginTop="415dp"
            android:textSize="16sp"
            android:layout_marginStart="160dp"/>

</RelativeLayout>