<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:id="@+id/key"
        android:layout_marginTop="70dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInputLayout"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/emailInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:maxLength="15"
            android:inputType="text"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill"/>

    </android.support.design.widget.TextInputLayout>



        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/passwordText">

            <RadioButton
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:text="@string/teacher" />

            <RadioButton
                android:id="@+id/student"
                android:layout_marginStart="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student" />
        </RadioGroup>


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-150dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_btn"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</RelativeLayout>