<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:elevation="90dp"
    android:layout_margin="7dp">
<!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userInfo"
        android:layout_margin="10dp"/>

        -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <!--<TextView
        android:id="@+id/ques_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/qnum"
        android:textColor="#000000"
        android:textSize="16sp" /> -->

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>

  <LinearLayout
      android:id="@+id/options_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="25dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp">

      <TextView
          android:id="@+id/option_1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/option1"
          android:textSize="14sp"/>

      <TextView
          android:id="@+id/option_2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="150dp"
          android:text="@string/option2"/>
  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options_layout2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:textSize="14sp"
            android:text="@string/option4"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/ans_correct"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/correct_answer"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>