<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsActivity">

    <EditText
        android:id="@+id/phn_no_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_num"
        android:inputType="phone"
        android:textSize="22sp"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_below="@+id/phn_no_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/sms_lineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Your ward's score in "
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/phn_no_text"/>

        <TextView
            android:id="@+id/topic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textColor="#be1931"
            android:textStyle="italic"
            android:text="@string/topicname"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/sms_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:textColor="#0009ff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/not_given_text"
        android:layout_below="@+id/linear_layout"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/smsbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/sms_text"
        android:text="@string/confirm_your_result"/>

</RelativeLayout>