<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiveExamActivity">


    <include
        android:id="@+id/give_test_toolbar"
        layout="@layout/app_bar_layout"/>

    <TextView
        android:id="@+id/choose_class_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:freezesText="true"
        android:text="@string/choose_class"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/choose_class_student"
        android:layout_width="284dp"
        android:layout_height="34dp"
        android:layout_below="@+id/choose_class_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/topic_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_class_student"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/enter_topic" />

    <Button
        android:id="@+id/give_TestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topic_student"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/start_test" />
</RelativeLayout>